
This is planned to be our last release to support Python 2.4, however this
could be delayed given feedback from our users (e.g. if this proves to be a
problem in combination with other libraries or a popular Linux distribution).

Bio.SeqIO can now read and write IMGT files, a variant of the EMBL sequence
text file format with longer feature indentation.

(At least) 4 people have contributed to this release, include 1 new person:

Bartek Wilczynski
Michiel de Hoon
Peter Cock
Uri Laserson (first contribution)

===================================================================

31 August 2010: Biopython 1.55 released.

See the notes below for the Biopython 1.55 beta release for changes since
Biopython 1.54 was released. Since the beta release we have marked a few
modules as obsolete or deprecated, and removed some deprecated code. There
have also been a few bug fixes, extra unit tests, and documentation
improvements.

(At least) 12 people have contributed to this release, including 6 new people:

Andres Colubri (first contribution)
Carlos Rios Vera (first contribution)
Claude Paroz (first contribution)
Cymon Cox
Eric Talevich
Frank Kauff
Joao Rodrigues (first contribution)
Konstantin Okonechnikov (first contribution)
Michiel de Hoon
Nathan Edwards (first contribution)
Peter Cock
Tiago Antao

===================================================================

18 August 2010: Biopython 1.55 beta released.

This is a beta release for testing purposes, both for new features added,
and more importantly updates to avoid code deprecated in Python 2.7 or in
Python 3. This is an important step towards Python 3 support.

We are phasing out support for Python 2.4. We will continue to support it
for at least one further release (Biopython 1.56). This could be delayed
given feedback from our users (e.g. if this proves to be a problem in
combination with other libraries or a popular Linux distribution).
